--- a/1.6/Languages/English/Keyed/MenuTranslation.xml
+++ b/1.6/Languages/English/Keyed/MenuTranslation.xml
@@ -12,6 +12,23 @@
     <FantasyBiotech_Settings_Mech_Replace_Title>Replace Mechs</FantasyBiotech_Settings_Mech_Replace_Title>
     <FantasyBiotech_Settings_Mech_Replace_Desc>Replaces vanilla mechs with artifice constructs in various game events. Advised to leave on if you want full experience of the mod.</FantasyBiotech_Settings_Mech_Replace_Desc>
 
+    <FantasyBiotech_Settings_Vampire_Replace_Title>Make Deathrest Medieval</FantasyBiotech_Settings_Vampire_Replace_Title>
+    <FantasyBiotech_Settings_Vampire_Replace_Desc>Makes deathrest buildings medieval and appropriate changes to cost</FantasyBiotech_Settings_Vampire_Replace_Desc>
+    <FantasyBiotech_Settings_VampireTextures_Replace_Title>Replace Deathrest Building Textures</FantasyBiotech_Settings_VampireTextures_Replace_Title>
+    <FantasyBiotech_Settings_VampireTextures_Replace_Desc>Replaces deathrest textures with fantasy themed textures</FantasyBiotech_Settings_VampireTextures_Replace_Desc>
+
+    <FantasyBiotech_Settings_BasicDeathrestCasket_Replace_Title>Basic Deathrest Casket</FantasyBiotech_Settings_BasicDeathrestCasket_Replace_Title>
+    <FantasyBiotech_Settings_BasicDeathrestCasket_Replace_Desc>Enables a basic casket for deathrest</FantasyBiotech_Settings_BasicDeathrestCasket_Replace_Desc>
+
+    <FantasyBiotech_Settings_RenameSanguophage_Replace_Title>Rename Sanguophage</FantasyBiotech_Settings_RenameSanguophage_Replace_Title>
+    <FantasyBiotech_Settings_RenameSanguophage_Replace_Desc>Renames sanguophages to vampires</FantasyBiotech_Settings_RenameSanguophage_Replace_Desc>
+
+    <FantasyBiotech_Settings_RetextureBlood_Replace_Title>Retexture Hemogen Packs</FantasyBiotech_Settings_RetextureBlood_Replace_Title>
+    <FantasyBiotech_Settings_RetextureBlood_Replace_Desc>Retextures hemogen packs to blood vials</FantasyBiotech_Settings_RetextureBlood_Replace_Desc>
+
+    <FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Title>Make Sanguophage Faction Medieval</FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Title>
+    <FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Desc>Makes the Sanguophage Faction Medieval</FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Desc>
+
     <!-- Reset to Default -->
     <FantasyBiotech_ResetDefault>Reset to Default</FantasyBiotech_ResetDefault>
 
