--- a/1.6/Languages/English/Keyed/MenuTranslation.xml
+++ b/1.6/Languages/English/Keyed/MenuTranslation.xml
@@ -26,6 +26,9 @@
     <FantasyBiotech_Settings_RetextureBlood_Replace_Title>Retexture Hemogen Packs</FantasyBiotech_Settings_RetextureBlood_Replace_Title>
     <FantasyBiotech_Settings_RetextureBlood_Replace_Desc>Retextures hemogen packs to blood vials</FantasyBiotech_Settings_RetextureBlood_Replace_Desc>
 
+    <FantasyBiotech_Settings_MedievalVampireScenario_Replace_Title>Make Sanguophage scenario medieval</FantasyBiotech_Settings_MedievalVampireScenario_Replace_Title>
+    <FantasyBiotech_Settings_MedievalVampireScenario_Replace_Desc>Makes the vanilla sanguophage scenario medieval</FantasyBiotech_Settings_MedievalVampireScenario_Replace_Desc>
+
     <FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Title>Make Sanguophage Faction Medieval</FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Title>
     <FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Desc>Makes the Sanguophage Faction Medieval</FantasyBiotech_Settings_MedievalSanguophageFaction_Replace_Desc>
 
