--- a/1.6/Languages/English/Keyed/MenuTranslation.xml
+++ b/1.6/Languages/English/Keyed/MenuTranslation.xml
@@ -15,7 +15,7 @@
 
     <!-- Genetic Options -->
     <FantasyBiotech_Settings_MedievalGoJuice_Replace_Title>Medieval Go-Juice</FantasyBiotech_Settings_MedievalGoJuice_Replace_Title>
-    <FantasyBiotech_Settings_MedievalGoJuice_Replace_Desc>Modifies Go-Juice to be a medieval.</FantasyBiotech_Settings_MedievalGoJuice_Replace_Desc>
+    <FantasyBiotech_Settings_MedievalGoJuice_Replace_Desc>Modifies Go-Juice to be a medieval and to be made at the Fueled Stove. Will override WTL default settings to make Hussar's medieval.</FantasyBiotech_Settings_MedievalGoJuice_Replace_Desc>
 
     <!-- Sanguophage Options -->
     <FantasyBiotech_Settings_BasicDeathrestCasket_Replace_Title>Basic Deathrest Casket</FantasyBiotech_Settings_BasicDeathrestCasket_Replace_Title>
