--- a/1.6/Languages/English/Keyed/MenuTranslation.xml
+++ b/1.6/Languages/English/Keyed/MenuTranslation.xml
@@ -14,6 +14,9 @@
     <FantasyBiotech_Settings_Mech_Replace_Desc>Replaces vanilla mechs with artifice constructs in various game events. Advised to leave on if you want full experience of the mod.</FantasyBiotech_Settings_Mech_Replace_Desc>
 
     <!-- Genetic Options -->
+	<FantasyBiotech_Settings_MedievalGrowthVat_Replace_Title>Medieval Growth Vat</FantasyBiotech_Settings_MedievalGrowthVat_Replace_Title>
+    <FantasyBiotech_Settings_MedievalGrowthVat_Replace_Desc>Modifies Growth Vat to be a medieval.</FantasyBiotech_Settings_MedievalGrowthVat_Replace_Desc>
+	
     <FantasyBiotech_Settings_MedievalGoJuice_Replace_Title>Medieval Go-Juice</FantasyBiotech_Settings_MedievalGoJuice_Replace_Title>
     <FantasyBiotech_Settings_MedievalGoJuice_Replace_Desc>Modifies Go-Juice to be a medieval and to be made at the Fueled Stove. Will override WTL default settings to make Hussar's medieval.</FantasyBiotech_Settings_MedievalGoJuice_Replace_Desc>
 
